--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [metadata]
-description-file = README.md
+name = rapidocr_openvinogpu
+description = RapidOCR for OpenVINO GPU
+long_description = file: README.md
+long_description_content_type = text/markdown
+
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: Apache-2.0
+    Operating System :: OS Independent
